# Auto-OCR

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_folder_monitor.py  test_ocr_flow.py
config/: __init__.py  manager.py  schema.py
converters/: __init__.py  base.py  factory.py  pdf_converter.py  text_converter.py
core/: __init__.py  task.py  task_queue.py  task_worker.py
docs/: architecture.md
engines/: __init__.py  base.py  factory.py  glm_ocr.py  llama_cpp_engine.py
monitors/: __init__.py  folder_monitor.py
postprocess/: __init__.py  base.py  delete_processor.py  factory.py  move_processor.py
ui/: __init__.py  main_window.py
ui/styles/: __init__.py  fluent_style.py
ui/widgets/: __init__.py  log_viewer.py  path_selector.py  progress_panel.py
utils/: __init__.py  logger.py  path_adapter.py
